--- a/Snack 4/index.html
+++ b/Snack 4/index.html
@@ -8,6 +8,9 @@
     <script src="./js/script.js"></script>
 </head>
 <body>
+    <ul class="lista-studenti"></ul>
+    <ul class="lista-studenti"></ul>
+    <ul class="lista-studenti"></ul>
 
 </body>
 </html>
